fixed edit user session alignment issue

--- a/app/assets/stylesheets/components/_tab.scss
+++ b/app/assets/stylesheets/components/_tab.scss
@@ -6,7 +6,7 @@
 .tabs-underlined .tab-underlined {
   color: black;
   padding: 8px;
-  margin: 8px 16px;
+  margin: 8px 0px;
   opacity: .4;
   cursor: pointer;
   text-decoration: none;
